--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       <div id="page-home">
         <div class="profile-photo"></div>
         <div class="profile-text">
-          <h1>Your Name</h1>
+          <h1>TCMG 412: Contemporary Issues in TCMG </h1>
         </div>
         <div class="page-body">
           <div class="about">
