--- a/index.html
+++ b/index.html
@@ -108,22 +108,22 @@
             Lorem Ipsum.
           </div>
           <div class="linkage">
-            <a href="https://www.twitch.tv/jzimz" class="link-item twitch">
+            <a href="https://www.tamu.edu/" class="link-item TAMU">
               <div class="icon"></div>
-              <div class="label">Twitch</div>
+              <div class="label">Texas A&M</div>
             </a>
-            <a href="https://discord.gg/aV37twc" class="link-item discord">
+            <a href="https://howdy.tamu.edu/uPortal/normal/render.uP" class="link-item HOWDY">
               <div class="icon"></div>
-              <div class="label">Discord</div>
+              <div class="label">HOWDY</div>
             </a>
-            <a href="https://www.instagram.com/jzimz.tv/"
-              class="link-item instagram">
+            <a href="https://library.tamu.edu/"
+              class="link-item Library">
               <div class="icon"></div>
-              <div class="label">Instagram</div>
+              <div class="label">Library</div>
             </a>
-            <a href="https://twitter.com/jzimztv" class="link-item twitter">
+            <a href="https://canvas.tamu.edu/" class="link-item Canvas">
               <div class="icon"></div>
-              <div class="label">Twitter</div>
+              <div class="label">Canvas</div>
             </a>
           </div>
         </div>
