--- a/index.html
+++ b/index.html
@@ -96,16 +96,13 @@
         </div>
         <div class="page-body">
           <div class="about">
-            <strong>Lorem Ipsum</strong> is simply dummy text of the printing
-            and typesetting industry. Lorem Ipsum has been the industry's
-            standard dummy text ever since the 1500s, when an unknown printer
-            took a galley of type and scrambled it to make a type specimen book.
-            It has survived not only five centuries, but also the leap into
-            electronic typesetting, remaining essentially unchanged. It was
-            popularised in the 1960s with the release of Letraset sheets
-            containing Lorem Ipsum passages, and more recently with desktop
-            publishing software like Aldus PageMaker including versions of
-            Lorem Ipsum.
+            <strong>TCMG 412</strong> is a course about DevOps and the Modern IT team.
+            This course designed to give students the necessary tools to operate in the
+            modern day IT field. The course provides students the opportunity to work in teams
+            to deliver modern IT services and experience the DevOps model of service. The goal is
+            to give students a basic understanding of what the DevOps model of IT service delivery
+            is like. Students will also acquire hands-on experience through a number of commonly used 
+            tools in the DevOps environment. 
           </div>
           <div class="linkage">
             <a href="https://www.tamu.edu/" class="link-item TAMU">
