Updated Image links

--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
         background-color: white;
         border-radius: 50%;
         background-repeat: no-repeat;
-        background-image: url('assets/profile.jpeg');
+        background-image: url('assets/DevOps-use_3.jpg');
         background-size: 118%;
         background-position: 70% 28%
       }
       .profile-photo:hover {
-        background-image: url('assets/profile-alt.png');
+        background-image: url('assets/Screen Shot 2022-09-13 at 1.41.21 PM.png');
         background-size: 100%;
       }
 
