--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@
               <div class="icon"></div>
               <div class="label">Library</div>
             </a>
-            <a href="https://canvas.tamu.edu/" class="link-item Canvas">
+            <a href="https://412-group-7-gitprojects.github.io/group7pjct2.github.io/ringday.html" class="link-item Canvas">
               <div class="icon"></div>
-              <div class="label">Canvas</div>
+              <div class="label">Aggie Tradition</div>
             </a>
           </div>
         </div>
