--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
       .profile-photo {
         width: 180px;
         height: 180px;
-        background-color: white;
-        border-radius: 75%;
+        background-color: grey;
+        border-radius: 100%;
         background-repeat: no-repeat;
         background-image: url('assets/DevOps-use_3.jpg');
-        background-size: 118%;
+        background-size: 125%;
         background-position: 70% 28%
       }
       .profile-photo:hover {
