--- a/ringday.html
+++ b/ringday.html
@@ -5,7 +5,7 @@ permalink: /ringday.html
 ---
 
 <div class="text-center">
-  <h1>four types of work</h1>
+  <h1>Four Types of Work</h1>
   <h1>Business Projects, IT projects, IT Operations, and Unplanned work</h1>
   <br/>
 
