--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             </a>
             <a href="https://412-group-7-gitprojects.github.io/group7pjct2.github.io/ringday.html" class="link-item Canvas">
               <div class="icon"></div>
-              <div class="label">Aggie Tradition</div>
+              <div class="label">Unplanned Work</div>
             </a>
           </div>
         </div>
