--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
     </style>
   </head>
-  <body style="background-color:grey;">
+  <body>
     <div id="app">
       <div id="page-home">
         <div class="profile-photo"></div>
