--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       .profile-photo {
         width: 180px;
         height: 180px;
-        background-color: grey;
+        background-color: white;
         border-radius: 150%;
         background-repeat: no-repeat;
         background-image: url('assets/DevOps-use_3.jpg');
