--- a/index.html
+++ b/index.html
@@ -121,7 +121,8 @@
               <div class="icon"></div>
               <div class="label">Library</div>
             </a>
-            <a href="https://412-group-7-gitprojects.github.io/group7pjct2.github.io/ringday.html" class="link-item Canvas">
+            <a href="https://412-group-7-gitprojects.github.io/group7pjct2.github.io/ringday.html" class="link-item Canvas"><img src="assets/TAMU seal.png">
+
               <div class="icon"></div>
               <div class="label">Unplanned Work</div>
             </a>
