--- a/index.html
+++ b/index.html
@@ -121,10 +121,13 @@
               <div class="icon"></div>
               <div class="label">Library</div>
             </a>
-            <a href="https://412-group-7-gitprojects.github.io/group7pjct2.github.io/ringday.html" class="link-item Canvas"><img src="assets/TAMU seal.png">
-
+            <a href="https://412-group-7-gitprojects.github.io/group7pjct2.github.io/ringday.html" class="link-item Canvas">
               <div class="icon"></div>
               <div class="label">Unplanned Work</div>
+            </a>
+            <a href="https://catalog.tamu.edu/undergraduate/engineering/technology-industrial-distribution/technology-management-bs/" class="link-item TCMG">
+              <div class="icon"></div>
+              <div class="label">TCMG</div>
             </a>
           </div>
         </div>
