Attempting to put tamu logo

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
       }
 
       .profile-photo {
-        width: 180px;
-        height: 180px;
+        width: 250px;
+        height: 250px;
         background-color: white;
         background-repeat: no-repeat;
         background-image: url('assets/DevOps-use_3.jpg');
@@ -107,7 +107,7 @@
             tools in the DevOps environment. 
           </div>
           <div class="linkage">
-            <a href="https://www.tamu.edu/" class="link-item TAMU">
+            <a href="https://www.tamu.edu/" class="link-item TAMU" src="assets/TAMU seal.png">
               <div class="icon"></div>
               <div class="label">Texas A&M</div>
             </a>
