--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         </div>
       </div>
     </div>
-          <div class="wp-container-8 wp-block-group">
+          <div class="center">
              <h2 class="has-text-align-center"><strong><span style="text-decoration: underline;">Resources to Follow</span></strong></h2>
             
              <a href="https://www.amazon.com/Effective-DevOps-Building-Collaboration-Affinity/dp/1491926309">
