--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
         align-items: center;
         margin-top: 60px;
       }
+      
+      #book {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 60px;
+      }
 
       .profile-photo {
         width: 250px;
@@ -131,7 +138,7 @@
         </div>
       </div>
     </div>
-          <div class="center">
+          <div id="book">
              <h2 class="has-text-align-center"><strong><span style="text-decoration: underline;">Resources to Follow</span></strong></h2>
             
              <a href="https://www.amazon.com/Effective-DevOps-Building-Collaboration-Affinity/dp/1491926309">
